--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Your Name",
   "license": "MIT",
   "scripts": {
-    "dev": "concurrently \"npm run dev:renderer\" \"npm run dev:main\"",
+    "dev": "node start-dev-fixed.js",
+    "dev:old": "concurrently \"npm run dev:renderer\" \"npm run dev:main\"",
     "dev:renderer": "vite",
     "dev:main": "tsc -p tsconfig.main.json && electron .",
     "build": "npm run build:renderer && npm run build:main",
