--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "Your Name",
   "license": "MIT",
   "scripts": {
-    "dev": "node start-dev-fixed.js",
+    "dev": "node check-ffmpeg.js && node start-dev-fixed.js",
     "dev:old": "concurrently \"npm run dev:renderer\" \"npm run dev:main\"",
     "dev:renderer": "vite",
     "dev:main": "tsc -p tsconfig.main.json && electron .",
+    "check-ffmpeg": "node check-ffmpeg.js",
     "build": "npm run build:renderer && npm run build:main",
     "build:renderer": "vite build",
     "build:main": "tsc -p tsconfig.main.json",
